--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 
 .fundo{
 	background-position: center;
-	width: 100%;
-	height: 100%;
-	
+	background-size: auto;
 }
 .MenuFoto{
 	position: fixed;
