--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
 	background-position: no-repeat center;
 	background-size: cover;
 	border: none;
-	
+	backgound-attachment: scroll;
+	top: 0px;
+	left: 0px;
+		
 }
 .MenuFoto{
 	position: fixed;
