--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 	background-size: cover;
 	border: none;
 	backgound-attachment: scroll;
-	height: 100em;
-	width: 100em;
+	height: 100%;
+	width: 100%;
 }
 .MenuFoto{
 	position: fixed;
