--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 
 .fundo{
-	background-position: no-repeat center;
-	background-size: cover;
-	border: none;
-	backgound-attachment: scroll;
-	height: 100%;
+	
+	background-position: center;
+    	background-size: cover;
+	position: fixed;
+	top: -10px;
+	left: -10px;
+	right: -10px;
+	height: 100px;
 	width: 100%;
+	margin: auto;
 }
 .MenuFoto{
 	position: fixed;
