--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 	
 	background-position: center;
     	background-size: cover;
-	height: 100px;
-	width: 70%;
+	height: 30%;
+	width: auto;
 	margin: auto;
 }
 .MenuFoto{
