--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 
 .fundo{
-	
 	background-position: center;
-    	background-size: cover;
-	height: auto;
-	width: auto;
-	margin: auto;
+	width: 100%;
+	height: 100%;
 }
 .MenuFoto{
 	position: fixed;
