--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h4{
 	text-overflow: ellipsis;
 	background-color: grey;
 	color: white;
-	position: fixed;
+	position: relative;
 	bottom: -40px;
 	right: 0px;
 	border: 13px double #33FFFF;
