--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h4{
 	background-color: grey;
 	color: white;
 	position: relative;
-	bottom: -40px;
+	bottom: 0em;
 	right: 0px;
 	border: 13px double #33FFFF;
 	font-style: italic;
